--- a/Core/Resources/Strings.resx
+++ b/Core/Resources/Strings.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Core.Connectors.Source.SkypeDbSourceConnectorFactory.Help" xml:space="preserve">
-    <value>Lorem Ipsum.</value>
+    <value>skypedb://path/to/main.db</value>
   </data>
   <data name="Core.Connectors.Target.ConsoleTargetConnectorFactory.Help" xml:space="preserve">
-    <value>Lorem Ipsum.</value>
+    <value>console:</value>
   </data>
 </root>
