--- a/Core/Resources/Strings.resx
+++ b/Core/Resources/Strings.resx
@@ -117,10 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Core.Connectors.Source.SkypeDbSourceConnectorFactory.Help" xml:space="preserve">
+  <data name="Core.Connectors.Source.Skype.SkypeDbSourceConnectorFactory.Help" xml:space="preserve">
     <value>Skype database in the following format: skypedb://path/to/main.db</value>
-  </data>
-  <data name="Core.Connectors.Target.ConsoleTargetConnectorFactory.Help" xml:space="preserve">
-    <value>console:</value>
   </data>
 </root>
