--- a/Core/Resources/Strings.resx
+++ b/Core/Resources/Strings.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Core.Connectors.Source.Skype.SkypeDbSourceConnectorFactory.Help" xml:space="preserve">
-    <value>Skype database in the following format: skypedb://path/to/main.db</value>
+    <value>skypedb://path/to/main.db</value>
+  </data>
+  <data name="Core.Connectors.Target.Files.FilesTargetConnectorFactory.Help" xml:space="preserve">
+    <value>file://path?format=json|plain|xml|csv&amp;store=simple|zip</value>
   </data>
 </root>
