#2 SkypeIdSourceConnector: current user.

--- a/Core/Resources/Strings.resx
+++ b/Core/Resources/Strings.resx
@@ -120,6 +120,9 @@
   <data name="Core.Connectors.Source.Skype.SkypeDbSourceConnectorFactory.Help" xml:space="preserve">
     <value>skypedb://path/to/main.db</value>
   </data>
+  <data name="Core.Connectors.Source.Skype.SkypeIdSourceConnectorFactory.Help" xml:space="preserve">
+    <value>skypeid://skypeid[?user=username]</value>
+  </data>
   <data name="Core.Connectors.Target.Json.JsonTargetConnectorFactory.Help" xml:space="preserve">
     <value>json://path/to/log.json</value>
   </data>
